# wagtail-dhivehi

./: .env_sample  Dockerfile  README.md  dev.docker-compose.yml  pyproject.toml
.github/workflows/: static-files.yml
onlydjango/: urls.py
onlydjango/settings/: base.py  dev.py
sampleapp/: apps.py  models.py  signals.py  urls.py  views.py
sampleapp/migrations/: 0001_initial.py
sampleapp/templates/sampleapp/: index.html
